--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,11 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
         {
             "type": "chrome",
             "request": "launch",
-            "name": "Open poll3.html",
-            "file": "c:\\Users\\magic\\Desktop\\poll3.html"
+            "name": "Open index.html",
+            "file": "c:\\Users\\magic\\Desktop\\BudieHOME\\index.html"
         }
     ]
 }
